--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,3 +4,16 @@
     padding: 0;
     background-color: rgb(219, 255, 250);
 }
+
+.btn-pokemon-item {
+    padding: 16px 32px;
+    margin-bottom: 10px;
+    background-color: green         ;
+    color:white;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    display:inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+}
