--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,6 +6,7 @@
 }
 
 /* Buttons */
+
 .btn-pokemon-item {
     padding: 16px 32px;
     margin-bottom: 10px;
@@ -20,10 +21,35 @@
     cursor: pointer;
 }
 
+/* Modals */
 
-/* Responsiveness across many various devices */
+#modal-container {
+    display: none;
+}
 
-/* Mobile Devices */
+#modal-container.is-visible {
+    position: fixed;
+    padding: 20px;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+  
+    /* to show it above other content */
+    z-index: 999; 
+  
+    /* to allow scrolling if the screen is not high enough*/
+    overflow: auto; 
+  
+    /* this is used to center the modal */
+    display: grid;
+    text-align: center;
+  }
+
+/* Responsiveness across many size devices */
+
 @media only screen and (min-width: 320px) and (max-width: 480px) {
     .container {
         
